--- a/HuTaoHelper.csproj
+++ b/HuTaoHelper.csproj
@@ -11,6 +11,8 @@
 
     <ItemGroup>
       <PackageReference Include="MaterialDesignThemes" Version="4.6.1" />
+      <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1370.28" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
 </Project>
