First release 1.0.0 and documentation

--- a/HuTaoHelper.csproj
+++ b/HuTaoHelper.csproj
@@ -8,6 +8,7 @@
         <Authors>Mishin870</Authors>
         <Company>Mishin870</Company>
         <ApplicationIcon>Images\Icon.ico</ApplicationIcon>
+        <AssemblyVersion>1.0.0</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
