--- a/HuTaoHelper.csproj
+++ b/HuTaoHelper.csproj
@@ -15,6 +15,46 @@
       <PackageReference Include="MaterialDesignThemes" Version="4.6.1" />
       <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1370.28" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="WPFLocalizeExtension" Version="3.9.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Update="Localization\Resources\en-US.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>en-US.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Localization\Resources\ru-RU.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>ru-RU.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Localization\Resources\Translations.en-US.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Localization\Resources\Translations.ru-RU.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Localization\Resources\Translations.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>Translations.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Localization\Resources\en-US.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Translations.en-US.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Localization\Resources\ru-RU.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Translations.ru-RU.resx</DependentUpon>
+      </Compile>
+      <Compile Update="Localization\Resources\Translations.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Translations.resx</DependentUpon>
+      </Compile>
     </ItemGroup>
 
 </Project>
