--- a/HuTaoHelper.Visual/HuTaoHelper.Visual.csproj
+++ b/HuTaoHelper.Visual/HuTaoHelper.Visual.csproj
@@ -19,6 +19,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
       <PackageReference Include="MaterialDesignThemes" Version="4.6.1" />
       <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1418.22" />
       <PackageReference Include="TaskScheduler" Version="2.10.1" />
@@ -26,6 +27,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\HuTaoHelper.Core\HuTaoHelper.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Images\Icon.ico" />
+      <Resource Include="Images\Icon.ico" />
+      <None Remove="Images\IconLight.ico" />
+      <Resource Include="Images\IconLight.ico" />
     </ItemGroup>
 
 </Project>
