--- a/HuTaoHelper.Core/HuTaoHelper.Core.csproj
+++ b/HuTaoHelper.Core/HuTaoHelper.Core.csproj
@@ -40,4 +40,8 @@
       </EmbeddedResource>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HuTaoHelper.Notifications\HuTaoHelper.Notifications.csproj" />
+    </ItemGroup>
+
 </Project>
