--- a/HuTaoHelper.Notifications/HuTaoHelper.Notifications.csproj
+++ b/HuTaoHelper.Notifications/HuTaoHelper.Notifications.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Telegram.Bot" Version="18.0.0" />
+    </ItemGroup>
+
 </Project>
